umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_aliphatic_coronene.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :aromatic-systems [
        {
          :atoms [0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23]
          :attrs "[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]"}]
      :atoms [
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C"
        "C"
        "C"
        "C"
        "C"
        "C"]
      :bonds [
        [0 17 :single]
        [0 1 :single]
        [1 2 :single]
        [2 19 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 20 :single]
        [5 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 21 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 22 :single]
        [11 12 :single]
        [12 13 :single]
        [13 14 :single]
        [14 23 :single]
        [14 15 :single]
        [15 16 :single]
        [16 17 :single]
        [17 18 :single]
        [18 23 :single]
        [18 19 :single]
        [19 20 :single]
        [20 21 :single]
        [21 22 :single]
        [22 23 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :aromatic-systems [
        {
          :atoms [0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23]
          :attrs "[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]"}]
      :atoms [
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C"
        "C"
        "C"
        "C"
        "C"
        "C"]
      :bonds [
        [0 17 :single]
        [0 1 :single]
        [1 2 :single]
        [2 19 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 20 :single]
        [5 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 21 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 22 :single]
        [11 12 :single]
        [12 13 :single]
        [13 14 :single]
        [14 23 :single]
        [14 15 :single]
        [15 16 :single]
        [16 17 :single]
        [17 18 :single]
        [18 23 :single]
        [18 19 :single]
        [19 20 :single]
        [20 21 :single]
        [21 22 :single]
        [22 23 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :aromatic-systems [
        {
          :atoms [0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23]
          :attrs "[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]"}]
      :atoms [
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C"
        "C"
        "C"
        "C"
        "C"
        "C"]
      :bonds [
        [0 17 :single]
        [0 1 :single]
        [1 2 :single]
        [2 19 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 20 :single]
        [5 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 21 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 22 :single]
        [11 12 :single]
        [12 13 :single]
        [13 14 :single]
        [14 23 :single]
        [14 15 :single]
        [15 16 :single]
        [16 17 :single]
        [17 18 :single]
        [18 23 :single]
        [18 19 :single]
        [19 20 :single]
        [20 21 :single]
        [21 22 :single]
        [22 23 :single]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :aromatic-systems [
        {
          :atoms [0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23]
          :attrs "[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]"}]
      :atoms [
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C#h"
        "C#h"
        "C"
        "C"
        "C"
        "C"
        "C"
        "C"
        "C"]
      :bonds [
        [0 17 :single]
        [0 1 :single]
        [1 2 :single]
        [2 19 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 20 :single]
        [5 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 21 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 22 :single]
        [11 12 :single]
        [12 13 :single]
        [13 14 :single]
        [14 23 :single]
        [14 15 :single]
        [15 16 :single]
        [16 17 :single]
        [17 18 :single]
        [18 23 :single]
        [18 19 :single]
        [19 20 :single]
        [20 21 :single]
        [21 22 :single]
        [22 23 :single]]}
    :success true
    :tie-breaks []}}
